--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/mivashchenko/chrono-flow#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
