add signup, login page and logic

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,3 @@
 OPENAI_API_KEY=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
+MONGO_URI=mongodb://root:example@mongo:27017
+JWT_SECRET=supersecret
