--- a/api/package.json
+++ b/api/package.json
@@ -19,11 +19,16 @@
   },
   "homepage": "https://github.com/mivashchenko/chrono-flow#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
+    "mongoose": "^7.3.0",
     "openai": "^3.2.1"
   },
   "devDependencies": {
