--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - /app/node_modules
+#      - /app/node_modules
       - ./frontend:/app
   api:
     build: ./api
@@ -17,11 +17,11 @@ services:
     depends_on:
       - mongo
     volumes:
-      - /app/node_modules
+#      - /app/node_modules
       - ./api:/app
 
   mongo:
-    image: mongo
+    image: mongo:latest
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
@@ -32,12 +32,10 @@ services:
     restart: always
     ports:
       - '8888:8081'
-    volumes:
-      - mongo_data:/data/db
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017
 
 volumes:
   mongo_data:
